[gd_scene load_steps=13 format=3 uid="uid://bhnsesxi6jiug"]

[ext_resource type="Script" path="res://Necromancer.gd" id="1_tjynp"]
[ext_resource type="Texture2D" uid="uid://b7f37by24ij74" path="res://art/Enemies/NecromancerFull.png" id="2_tq12d"]
[ext_resource type="FontFile" uid="uid://cf53ykfeqwnk3" path="res://fonts/Xolonium-Regular.ttf" id="3_1kr46"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a18b2"]
radius = 9.47568
height = 19.2216

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2y4mn"]
radius = 163.095
height = 576.0

[sub_resource type="CircleShape2D" id="CircleShape2D_n5mjo"]
radius = 41.1849

[sub_resource type="CircleShape2D" id="CircleShape2D_n0lub"]
radius = 91.8326

[sub_resource type="CircleShape2D" id="CircleShape2D_maebp"]
radius = 32.5104

[sub_resource type="Animation" id="Animation_k30fj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FullSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_51nu1"]
resource_name = "summon"
length = 1.00002
step = 0.333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FullSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_7osyx"]
resource_name = "walk"
length = 1.00003
step = 0.333333
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FullSpriteSheet:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.666667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dp17f"]
_data = {
"RESET": SubResource("Animation_k30fj"),
"summon": SubResource("Animation_51nu1"),
"walk": SubResource("Animation_7osyx")
}

[node name="Necromancer" type="CharacterBody2D" groups=["breakable", "mobs"]]
scale = Vector2(0.35, 0.35)
collision_layer = 4
collision_mask = 513
script = ExtResource("1_tjynp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -58.6)
scale = Vector2(14.8, 14.8)
shape = SubResource("CapsuleShape2D_a18b2")

[node name="MobHitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="HitboxShape" type="CollisionShape2D" parent="MobHitbox"]
position = Vector2(0, -350)
scale = Vector2(0.84, 0.84)
shape = SubResource("CapsuleShape2D_2y4mn")
debug_color = Color(0, 0.647059, 0.254902, 0.419608)

[node name="PursueRange" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 34

[node name="PursueRangeArea" type="CollisionShape2D" parent="PursueRange"]
scale = Vector2(84.22, 84.22)
shape = SubResource("CircleShape2D_n5mjo")
debug_color = Color(0, 0.619608, 0.584314, 0.278431)

[node name="AggroRange" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 34

[node name="AggroRangeArea" type="CollisionShape2D" parent="AggroRange"]
scale = Vector2(16.64, 16.64)
shape = SubResource("CircleShape2D_n0lub")
debug_color = Color(0.862745, 0.313726, 0.458824, 0.27451)

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 34

[node name="AttackRangeArea" type="CollisionShape2D" parent="AttackRange"]
scale = Vector2(80, 80)
shape = SubResource("CircleShape2D_maebp")
debug_color = Color(0.933333, 0.133333, 0.541176, 0.419608)

[node name="FullSpriteSheet" type="Sprite2D" parent="."]
texture = ExtResource("2_tq12d")
offset = Vector2(0, -358.46)
hframes = 3
vframes = 2
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_dp17f")
}

[node name="AttackDuration" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="HealthIndicatorPosition" type="Marker2D" parent="."]
position = Vector2(0, -700)

[node name="HealthIndicatorText" type="Label" parent="HealthIndicatorPosition"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("3_1kr46")
theme_override_font_sizes/font_size = 32
text = "
"
metadata/_edit_use_anchors_ = true

[connection signal="area_exited" from="PursueRange" to="." method="_on_pursue_range_area_exited"]
[connection signal="area_entered" from="AggroRange" to="." method="_on_aggro_range_area_entered"]
[connection signal="area_exited" from="AggroRange" to="." method="_on_aggro_range_area_exited"]
[connection signal="area_exited" from="AttackRange" to="." method="_on_attack_range_area_exited"]
[connection signal="animation_changed" from="AnimationPlayer" to="." method="_on_animation_player_animation_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="AttackDuration" to="." method="_on_attack_duration_timeout"]
